# S1UI

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs
src/api/: filters.ts  s1.ts
src/components/: ColumnPicker.tsx  DetailDrawer.tsx  EmptyState.tsx  ResourceTable.tsx  Sparkline.tsx  StatusBadge.tsx  ThreatTimeline.tsx
src/i18n/: index.ts
src/layout/: MainLayout.tsx
src/pages/: Agents.tsx  Dashboard.tsx  DeepVisibility.tsx  Exclusions.tsx  Login.tsx  Settings.tsx  Sites.tsx  Threats.tsx
src/store/: auth.ts  settings.ts
src/utils/: disableShortcuts.ts  time.ts
