[package]
name = "s1ui"
version = "0.1.0"
description = "SentinelOne Management Console (Rust + Tauri)"
license = "MIT"
edition = "2024"

[lib]
name = "s1ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.test]
opt-level = 0

[profile.bench]
opt-level = 3

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "socks"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
url = "2"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
